<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnBackRegister"
        android:layout_width="49dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="66dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/register"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="77dp"
        android:gravity="top"
        android:text="@string/register"
        android:textAppearance="@style/register"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBackRegister"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="111dp"
        android:layout_height="27dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="238dp"
        android:gravity="top"
        android:text="@string/name"
        android:textAppearance="@style/name"
        app:layout_constraintBottom_toTopOf="@+id/edtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBackRegister" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="108dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/surname"
        android:textAppearance="@style/surname"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="244dp" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/edtSurname"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="271dp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="99dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/username"
        android:textAppearance="@style/username"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="316dp" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="344dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/password"
        android:textAppearance="@style/password"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="388dp" />

    <TextView
        android:id="@+id/confirm_pas"
        android:layout_width="239dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/confirm_pas"
        android:textAppearance="@style/confirm_pas"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="452dp" />

    <EditText
        android:id="@+id/edtCPAss"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="480dp" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="408dp" />

    <TextView
        android:id="@+id/already_hav"
        android:layout_width="144dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/already_hav"
        android:textAppearance="@style/already_hav"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="531dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="554dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_person"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="208dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_person_add"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="278dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_person_add"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="353dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_lock_"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="415dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_lock_"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="487dp" />
</androidx.constraintlayout.widget.ConstraintLayout>