<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot_Password">


    <TextView
        android:id="@+id/username2"
        android:layout_width="91dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/username"
        android:textAppearance="@style/username"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="265dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_person"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="302dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="287dp" />

    <TextView
        android:id="@+id/password2"
        android:layout_width="95dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/password"
        android:textAppearance="@style/password"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="341dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="372dp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="314dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="440dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_lock_"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="381dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_lock_"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="449dp" />

    <ImageButton
        android:id="@+id/btnBackResetPassword"
        android:layout_width="49dp"
        android:layout_height="38dp"
        android:background="@color/white"
        app:srcCompat="@drawable/back"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="66dp" />

    <TextView
        android:id="@+id/reset_passw"
        android:layout_width="214dp"
        android:layout_height="96dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-black"
        android:gravity="top"
        android:text="@string/reset_passw"
        android:textAppearance="@style/reset_passw"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="59dp" />

    <TextView
        android:id="@+id/otp"
        android:layout_width="39dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/otp"
        android:textAppearance="@style/otp"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="420dp" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="161dp"
        android:layout_height="47dp"
        android:text="@string/reset"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="505dp" />

</androidx.constraintlayout.widget.ConstraintLayout>