<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Category">

    <ImageButton
        android:id="@+id/btnBackCreateCategory"
        android:layout_width="49dp"
        android:layout_height="38dp"
        android:background="@color/white"
        app:srcCompat="@drawable/back"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="66dp" />


    <!-- Category Name -->

    <TextView
        android:id="@+id/create_a_ca"
        android:layout_width="187dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-black"
        android:gravity="top"
        android:text="@string/create_a_ca"
        android:textAppearance="@style/create_a_ca"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="113dp" />

    <TextView
        android:id="@+id/category_na"
        android:layout_width="185dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/category_na"
        android:textAppearance="@style/category_na"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="206dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="259dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="231dp" />

    <TextView
        android:id="@+id/short_descr"
        android:layout_width="185dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/short_descr"
        android:textAppearance="@style/short_descr"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="269dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="262dp"
        android:layout_height="88dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="294dp" />

    <Button
        android:id="@+id/btnSaveCategory"
        android:layout_width="79dp"
        android:layout_height="45dp"
        android:text="save"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="452dp" />

    <TextView
        android:id="@+id/book_limit"
        android:layout_width="185dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/book_limit"
        android:textAppearance="@style/book_limit"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="382dp" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="78dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="407dp" />

</androidx.constraintlayout.widget.ConstraintLayout>