<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageButton
        android:id="@+id/btnBackLogin"
        android:layout_width="49dp"
        android:layout_height="38dp"
        android:background="@color/white"
        app:srcCompat="@drawable/back"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="66dp" />

    <TextView
        android:id="@+id/log_in2"
        android:layout_width="63dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="66dp"
        android:layout_marginBottom="190dp"
        android:gravity="top"
        android:text="@string/log_in"
        android:textAppearance="@style/log_in"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintStart_toEndOf="@+id/btnBackLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username3"
        android:layout_width="91dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/username"
        android:textAppearance="@style/username"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="265dp" />

    <TextView
        android:id="@+id/password3"
        android:layout_width="95dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/password"
        android:textAppearance="@style/password"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="341dp" />

    <TextView
        android:id="@+id/forgot_pass2"
        android:layout_width="120dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="145dp"
        android:gravity="top"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="287dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="372dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="459dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_person"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="302dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_lock_"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="381dp" />
</androidx.constraintlayout.widget.ConstraintLayout>